fix header heigth on small resolution telerik/kendo#17124

--- a/Kendo-UI-Bootstrap-Integration/src/Kendo-UI-Bootstrap-Integration/wwwroot/css/styles.css
+++ b/Kendo-UI-Bootstrap-Integration/src/Kendo-UI-Bootstrap-Integration/wwwroot/css/styles.css
@@ -402,6 +402,10 @@ footer {
     .header-description {
         font-size: 14px;
     }
+
+    .container-sm {
+        height: 62px;
+    }
 }
 
 @media (max-width: 768px) {
